# hector_quadrotor

./: README.md  tutorials.rosinstall
Onboard-SDK/sample/linux/common/: UserConfig.txt
ground_control_station/: CMakeLists.txt
ground_control_station/cloud_server_communication/: CMakeLists.txt  package.xml
ground_control_station/cloud_server_communication/include/cloud_server_communication/: delay.pb.cc  delay.pb.h  delay.proto
ground_control_station/cloud_server_communication/launch/: client.launch
ground_control_station/cloud_server_communication/src/: client2ground.cpp  subscribeGround.cpp
ground_control_station/gazebo_worlds/: CMakeLists.txt
ground_control_station/gazebo_worlds/launch/: obstacles.launch
ground_control_station/gazebo_worlds/rviz/: default.rviz
ground_control_station/gazebo_worlds/worlds/: obstacles.world
ground_control_station/ground_control_station/: CMakeLists.txt  package.xml
ground_control_station/ground_control_station/include/: CommandParser.h  DjiController.h  HectorQuadrotor.h  UavGroup.h
ground_control_station/ground_control_station/launch/: ground_control.launch
ground_control_station/ground_control_station/scripts/: keyboard_control.py  keyboard_control_hector.py
ground_control_station/ground_control_station/src/: command_parser.cpp  ground_control_station.cpp  uav_status_update.cpp
ground_control_station/ground_control_station/src/back/: DjiController2.h  Quadrotor.cpp  Quadrotor.h  keyboard_controller.cpp
ground_control_station/quadrotor_realsense/: CMakeLists.txt  package.xml
ground_control_station/quadrotor_realsense/launch/: quadrotor_realsense_woods.launch  realsense_d435_camera_static_transforms.launch  spawn_one_realsense_uav.launch  spawn_realsense_quadrotor.launch
ground_control_station/quadrotor_realsense/rviz/: quadrotor_realsense_woods.rviz
ground_control_station/quadrotor_realsense/urdf/: quadrotor.gazebo.xacro  quadrotor_base_realsense.xacro  realsense.xacro  realsense_d435_camera.urdf.xacro  sonar.xacro
hector_models/hector_sensors_description/urdf/: sonar_sensor.urdf.xacro
hector_quadrotor/hector_quadrotor_actions/src/: pose_action.cpp
hector_quadrotor/hector_quadrotor_controller_gazebo/src/: quadrotor_hardware_gazebo.cpp
hector_quadrotor/hector_quadrotor_controllers/launch/: controller.launch
hector_quadrotor/hector_quadrotor_controllers/src/: attitude_controller.cpp  position_controller.cpp  velocity_controller.cpp
hector_quadrotor/hector_quadrotor_demo/launch/: indoor_slam_gazebo.launch
hector_quadrotor/hector_quadrotor_description/launch/: test0.launch  test1.launch  test2.launch  xacrodisplay_quadrotor_base.launch
hector_quadrotor/hector_quadrotor_description/urdf/: quadrotor.urdf.xacro  quadrotor_base.urdf.xacro
hector_quadrotor/hector_quadrotor_gazebo/launch/: multiple_quadrotor_empty_world.launch  quadrotor_empty_world.launch  spawn_one_quadrotor.launch  spawn_quadrotor.launch  spawn_quadrotors.launch  spawn_two_quadrotors.launch
hector_quadrotor/hector_quadrotor_gazebo/urdf/: quadrotor_aerodynamics.gazebo.xacro
hector_quadrotor/hector_quadrotor_interface/: CMakeLists.txt
hector_quadrotor/quadrotor_test/: CMakeLists.txt
hector_quadrotor/quadrotor_test/launch/: test0.launch
hector_quadrotor/quadrotor_test/urdf/: quadrotor.gazebo.xacro  quadrotor_plugins.gazebo.xacro
(+3 files in other folders)
